crates/carta/tests/snapshots/golden_writer__revealjs__figure__figure-captioned.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<figure>
<img data-src="pic.png" title="fig title" alt="a caption" />
<figcaption aria-hidden="true">a caption</figcaption>
</figure>
</section>
