crates/carta/tests/snapshots/golden_writer__revealjs__figure__figure-no-alt.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<p><img data-src="pic.png" /></p>
</section>
