crates/carta/tests/snapshots/golden_writer__revealjs__figure__figure-with-dims.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<figure>
<img data-src="pic.png" title="t" width="200" alt="alt text" />
<figcaption aria-hidden="true">alt text</figcaption>
</figure>
</section>
